2.45 Stress seed e emailbuilder